name:                Mahjong
version:             0.1.0.0
author:              Tomato
maintainer:          Tomato.HF@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable Mahjong
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >=4.6 && <4.7
  default-language:    Haskell2010
